# sim_evo_game_memory3

./: .gitignore  .gitmodules  CMakeLists.txt  DirectedGraph.hpp  GroupedEvoGame.hpp  MultiLevelEvoGame.hpp  MultiLevelEvoGameLowMutation.hpp  MultiLevelEvoGameSerial.hpp  Partition.hpp  README.md  Scalapack.hpp  StrategyM3.cpp  StrategyM3.hpp  StrategySpace.hpp  UnionFind.hpp  _input.json  _input_batch.json  _input_low_mut.json  _input_multi.json  _input_multi_parallel.json  _mutant_list  calc_Q_sign.rb  find_shorter_memory_FR.cpp  fugaku_build.sh  icecream.hpp  main_calc_fractions.cpp  main_evo.cpp  main_evo_MPI.cpp  main_lifetime_distribution.cpp  main_mem1_finite_mut.cpp  main_mem1_finite_mut_analysis.cpp  main_mem1_low_mut.cpp  main_mem1_low_mut_MC.cpp  main_multi_evo.cpp  main_multi_evo_batch.cpp  main_multi_evo_low_mut.cpp  main_multi_evo_parallel.cpp  main_multi_evo_serial.cpp  test_DirectedGraph.cpp  test_GroupedEvoGame.cpp  (+6 more)
resutls/complete_time_separation/: plot_coop_levels_bar.py  plot_timeseries_grouped_lowmut.py
resutls/grouped/: plot_timeseries_grouped.py
resutls/grouped/M100/: _input_batch.json  plot.py
resutls/grouped/M1000/: _input_batch.json  curve.py  fugaku_job.sh  plot.py
resutls/grouped/M1000/memory2/: _input_batch.json  plot.py
resutls/homogeneous/: plot_homogeneous.py  plot_homogeneous_mem.py  plot_timeseries_homogeneous.py
script/: Pipfile  plot_c_levels.py
script_low_mut/: .gitignore  _input_sample.json  plot_timeseries.py  run.sh
script_mem1/: Pipfile  plot_frequency.py  run.sh
script_mem1_finite_mut_analysis/: plot.py
script_mem1_low_mut/: plot_abundance.py  run.sh
script_multievo/: .gitignore  _input_sample.json  plot_timeseries.py  readme.md  run.sh  run_parallel.sh
